--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.raj</groupId>
-	<artifactId>jdemo</artifactId>
+	<artifactId>spring-boot-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>jdemo</name>
+	<name>spring-boot-demo</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
